* RapidMiner enters safe mode (not loading plugins) when startup was interrupted
* Added new 'Export as PDF' action to the 'Print results or export' dropdown button
* Deleted tooltips for the operator list of the OptimizeParameters (Grid) operator
* UpdateDialog: Swiched the positions of the install button and the link to the extension homepage
* Replaced the standard Random funcion in the ExpressionParser with a custom one in order to involve the random seed/the RandomGenerator for the process    
* BUGFIX: Recent files are now updated on process save
* BUGFIX: The condition on performance check at the Loop Until Operator now works properly if the performance decreases
* BUGFIX: Editing context variables now immediately flags the process as changed
* BUGFIX: If set to 'ask', the 'close previous results' dialog will no longer appear when resuming from a breakpoint
* BUGFIX: Breakpoints can no longer be added to the root operator
* BUGFIX: 'Store process here' popup menu action on another process will now correctly flag the process as saved
* BUGFIX: Added error message for 'Find Threshold' operator when an invalid class name is entered as parameter
* BUGFIX: The Pivot operator used on an empty example set no longer creates an example set with one example (filled with missing values)
* BUGFIX: The De-Pivot operator now has much better error handling when trying to setup the index attribute as an already existing attribute
* BUGFIX: Read Excel cannot open the Import Configuration Wizard, if the excel_file parameter is not set
* BUGFIX: Nominal to Binominal can handle border cases with mapping containing less than 2 values
* BUGFIX: Configure Repository dialog now saves user credentials fore remote repositores again
* BUGFIX: Added error shown in Problems view when entering invalid regular expression for 'replace what' parameter of Rename by Replacing operator