@@ -141,7 +141,7 @@
 		<!-- building extension-->
 		<echo message="RapidMiner Extension ${extension.name}: Compile with Java from dir: ${java.home}" />
 		<echo message="RapidMiner Extension ${extension.name}: using Java version: ${java.version}" />
-		<javac encoding="${build.encoding}" debug="${compiler.debug}" destdir="${build.build}" deprecation="${compiler.deprecation}" compiler="${compiler.version}" fork="true" memorymaximumsize="400m" target="1.6">
+		<javac encoding="${build.encoding}" debug="${compiler.debug}" destdir="${build.build}" deprecation="${compiler.deprecation}" compiler="${compiler.version}" fork="true" memorymaximumsize="400m" source="1.6" target="1.6">
 			<src>
 				<path refid="build.sources.path" />
 			</src>
