@@ -826,7 +826,7 @@ gui.action.menu.show_view.mne   = S
 gui.action.menu.show_view.tip   = Switch UI components on and off.
 
 gui.action.expert.label = Expert Mode
-gui.action.expert.mne   = E
+gui.action.expert.mne   = x
 gui.action.expert.icon  = graduate.png
 gui.action.expert.tip   = Switch to expert mode (all available parameters are visible).
 gui.action.expert.acc   = F4
@@ -913,8 +913,8 @@ gui.action.move_column.tip   = Move the selected column to another position.
 
 gui.action.enable_operator.label = Enable Operator
 gui.action.enable_operator.tip   = Choose whether this operator should be executed.
-gui.action.enable_operator.mne   = E
-gui.action.enable_operator.acc   = control E
+gui.action.enable_operator.mne   = l
+gui.action.enable_operator.acc   = ctrl E
 gui.action.enable_operator.icon  = element_ok.png
 
 gui.action.enable_operator_multiple.label = Enable {0} Operators
@@ -936,11 +936,13 @@ gui.action.make_dirty.icon  = bullet_ball_glass_yellow.png
 gui.action.breakpoint_before.label = Breakpoint Before
 gui.action.breakpoint_before.icon  = breakpoint_up.png
 gui.action.breakpoint_before.tip   = Insert a breakpoint before the current operator.
+gui.action.breakpoint_before.mne   = r
 gui.action.breakpoint_before.acc   = shift F7
 
 gui.action.breakpoint_after.label = Breakpoint After
 gui.action.breakpoint_after.icon  = breakpoint_down.png
 gui.action.breakpoint_after.tip   = Insert a breakpoint after the current operator.
+gui.action.breakpoint_after.mne   = k
 gui.action.breakpoint_after.acc   = F7
 
 gui.action.breakpoint_within.label = Breakpoint Within
@@ -1970,8 +1972,8 @@ gui.action.update.select.tip   = Select or deselect current item for installatio
 gui.action.update.purchase.label = Purchase extension
 gui.action.update.purchase.mne   = P
 
-gui.label.update.need_to_log_in.label = <a href=\"#\">Login</a> to install commercial extensions.
-gui.label.update.extension_homepage.label = Go to <a href=\"\">extension homepage</a>
+gui.label.update.need_to_log_in.label = <a href\="\#">Login</a> to install commercial extensions.
+gui.label.update.extension_homepage.label = Go to <a href\="">extension homepage</a>
 
 gui.action.update.fetch_bookmarks.label = Fetch Bookmarks
 gui.action.update.fetch_bookmarks.icon  = bookmark_blue.png
@@ -3511,6 +3513,7 @@ gui.progress.send_report_to_bugzilla.label = Sending bug report to BugZilla
 gui.progress.run_remote_now.label = Start process on RapidAnalytics
 gui.progress.db_clear_cache.label = Clear database metadata cache
 gui.progress.import_binary.label = Loading Binary File
+gui.progress.log_in_to_updateserver.label = Logging in to Update Server
 
 ########################################
 # Splash Screen
