@@ -67,6 +67,9 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.NodeList;
 
+import sun.net.www.protocol.http.AuthCacheImpl;
+import sun.net.www.protocol.http.AuthCacheValue;
+
 import com.rapid_i.Launcher;
 import com.rapidminer.RapidMiner;
 import com.rapidminer.RapidMiner.ExecutionMode;
@@ -465,6 +468,7 @@ public class UpdateManager {
 
 	public static void clearAccountSerive() {
 		accountService = null;
+		AuthCacheValue.setAuthCache(new AuthCacheImpl());
 	}
 
 	public synchronized static AccountService getAccountService() throws MalformedURLException, URISyntaxException {
