@@ -54,6 +54,7 @@ Changes from RapidMiner 5.2.8 to 5.3.0
 * Added new 'Export as PDF' action to the 'Print results or export' dropdown button
 * Deleted tooltips for the operator list of the OptimizeParameters (Grid) operator
 * UpdateDialog: Swiched the positions of the install button and the link to the extension homepage
+* UpdateDialog: Checks if the user purchased the extension when returning to the dialog after hitting the "purchase" button
 * Replaced the standard Random funcion in the ExpressionParser with a custom one in order to involve the random seed/the RandomGenerator for the process    
 * BUGFIX: Recent files are now updated on process save
 * BUGFIX: The condition on performance check at the Loop Until Operator now works properly if the performance decreases
